<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="buttonDev">/</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonMult">*</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMinus">-</string>
    <string name="buttonPlus">+</string>
    <string name="button0">0</string>
    <string name="buttonPt">.</string>
    <string name="buttonC">C</string>
    <string name="buttonEq">=</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change theme</string>
</resources>