<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_wood_24490"/>

    <TextView
        android:id="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toEndOf="@id/button_dev"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyStyle_TextView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_dev"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/MyStyle_Buttons"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dev"
        android:text="@string/buttonDev"
        app:layout_constraintBottom_toTopOf="@id/button_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_mult"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_mult"
        android:text="@string/buttonMult"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_dev"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_mult"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:text="@string/buttonPt"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:text="@string/button0"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:text="@string/buttonC"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/button_minus"
        style="@style/MyStyle_Buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:text="@string/buttonEq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_0"
        style="@style/MyStyle_Buttons"/>


</androidx.constraintlayout.widget.ConstraintLayout>